Direct to new channels widget, dynamically load JSON

--- a/server/channelViewer.htm
+++ b/server/channelViewer.htm
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
     <head>
-        <script src = 'urlParams.js'></script>
-        <script src = 'misc.js'></script>
+        <script src = 'urlParameters.js'></script>
         <script async type = "module">
             const { jml, jml_nester } = await import('./jml.mjs');
 
@@ -146,6 +145,7 @@
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
+        <h1>THIS WORKS!</h1>
         <div id = 'members'></div>
         <h1 id = 'channelTitle'></h1>
         <h3 id = 'channelInfo'></h3>
@@ -153,4 +153,4 @@
             <table id = 'messages'></table>
         </div>
     </body>
-</html>
+</html> -->
