Make widgets more flexible (aux input), update data loading

--- a/server/index.htm
+++ b/server/index.htm
@@ -42,7 +42,7 @@
                 document.tile = archiveData.archiveName;
                 document.querySelector('#heading').innerHTML = archiveData.archiveName;
 
-                applyWidgetJml(channelsWidgetJml, archiveData, '#channels');
+                applyWidgetJml('#channels', channelsWidgetJml, archiveData, null);
             }
 
         </script>
