Style changes, fix member pane & move nametag pos

--- a/server/channelPage.htm
+++ b/server/channelPage.htm
@@ -69,6 +69,7 @@
 
         </script>
         <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="memberPane.css">
     </head>
     <body>
         <div id='members'></div>
