--- a/server/channelViewer.htm
+++ b/server/channelViewer.htm
@@ -67,9 +67,9 @@
                 applyWidgetJml('#messages', channelMessagesJml, archiveData, messages);
             }
 
-
         </script>
         <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="memberPane.css">
     </head>
     <body>
         <div id='members'></div>
