--- a/server/index.htm
+++ b/server/index.htm
@@ -47,6 +47,7 @@
 
         </script>
         <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="memberPane.css">
     </head>
     <body>
         <h1 id = 'heading'></h1>
