--- a/server/userPage.htm
+++ b/server/userPage.htm
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
     <head>
         <script src = 'urlParameters.js'></script>
@@ -79,4 +79,4 @@
         <div id='channelStats'></div>
         <div id='channelEntries'></div>
     </body>
-</html>
+</html> -->
